Modified build script to use common run directory

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,11 @@ apply plugin: 'forge'
 
 minecraft {
     version = "1.8-11.14.1.1341"
-    runDir = "eclipse"
+	if(file('../run').exists()){
+		runDir = "../run"
+	}else{
+		runDir = "run"
+	}
     
     // the mappings can be changed at any time, and must be in the following format.
     // snapshot_YYYYMMDD   snapshot are built nightly.
