--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ apply plugin: 'forge'
 minecraft {
     version = "1.8-11.14.1.1341"
 	if(file('../run').exists()){
-		runDir = "../run"
+		runDir = '../run'
 	}else{
-		runDir = "run"
+		runDir = 'run'
 	}
     
     // the mappings can be changed at any time, and must be in the following format.
@@ -34,7 +34,7 @@ minecraft {
 }
 
 if(!project.hasProperty("version")) {
-    version = "0.1"
+    version = '0.1'
 }
 if(!project.hasProperty("modid")) {
     modid = project.projectDir.name
@@ -43,8 +43,8 @@ if(!project.hasProperty("name")) {
     name = project.projectDir.name
 }
 archivesBaseName = "${modid}-${project.minecraft.version.split('-')[0]}"
-modid = modid.toLowerCase()
-group= "alpvax.mod.$modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+modid = modid.equalsIgnoreCase('alpcore') ? modid : 'common'
+group = "alpvax.${modid.toLowerCase()}" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 
 dependencies {
     // you may put jars on which you depend on in ./libs
@@ -79,5 +79,11 @@ processResources
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
+    }
+}
+
+jar {
+	manifest {
+		attributes 'FMLCorePlugin': "alpvax.${project.modid}.core.${project.modid}Plugin"
     }
 }
