Added easy updating of forge after pulling. Simply run updateClasspath.bat to update without modifying the settings file.

--- a/build.gradle
+++ b/build.gradle
@@ -87,3 +87,5 @@ jar {
 		attributes 'FMLCorePlugin': "alpvax.${project.modid}.core.${project.modid}Plugin"
     }
 }
+
+eclipse.pathVariables 'USER_HOME': file(System.getenv('HOME'))
